# raytrace-rs

./: Cargo.toml
examples/: spherecast.rs
src/: camera.rs  color.rs  lib.rs  material.rs  ray.rs  raycast.rs  screen.rs  world.rs
src/math/: consts.rs  mod.rs
src/primitive/: mod.rs  sphere.rs
