[package]
name = "raytracer"
version = "0.1.0"
authors = ["Audrey Baxter <baxtea@pm.me>"]
edition = "2018"

[dependencies]
nalgebra-glm = "0.4"
ord_subset = "3.1"
lazy_static = "1.3"
image = "0.21"
rayon = { optional = true, version = "1.0" }

[features]
double-precision = []
parallel = ["rayon"]
default = ["double-precision"]